Fixed alignment issue with banner and officer list

--- a/About/about.css
+++ b/About/about.css
@@ -7,8 +7,7 @@ body
 div.Banner
 {
     margin-top: 100px;
-    display:block;
-    margin-left: 23%;
+    display: inline-block;
     text-align: center;
     font-size: 20px;
 }
